apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    external-dns.alpha.kubernetes.io/hostname: balkandevops.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: d4d7f917-3152-4d10-aaf6-4b2e62743fc6.cfargotunnel.com
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: balkandevops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 3000
